[project]
name = "docs_to_sql"
version = "0.1.0"
description = ""
authors = [
    { name = "Paul Dlug", email = "paul.dlug@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]

[tool.mypy]
files = ["src"]
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"